Fix verse block alignment override

--- a/.dev/assets/shared/css/blocks/verse/_style.scss
+++ b/.dev/assets/shared/css/blocks/verse/_style.scss
@@ -4,5 +4,4 @@ pre {
 	line-height: 1.5;
 	overflow: auto;
 	padding: 3rem 2rem;
-	text-align: left;
 }
